# pocaflow

./: Cargo.toml  LICENSE  README.md  build.rs  demo.py  pocaflow.pyi  pyproject.toml
examples/: testall.py
examples/fun/: mandelbrot.py  particles.py  spinningcube.py  waveform.py
examples/tests/: benchmarking.py  test.py
src/: lib.rs
src/backends/: mod.rs
src/backends/cuda/: context.rs  matmul.rs  mod.rs
src/backends/metal/: context.rs  matmul.rs  mod.rs
src/blas/: bindings.rs  mod.rs  operations.rs
src/core/: dtype.rs  mod.rs  shape.rs  tensor.rs
src/cpu/: blas.rs
src/cuda/: matmul_kernel.cu
src/gpu/: backend.rs  cuda_backend.rs  mod.rs
src/kernels/cuda/: matmul_kernel.cu
src/operations/: batch.rs  conversion.rs  matmul.rs  mod.rs  vec_ops.rs
src/operations/experimental/: cuda_matmul.rs  metal_matmul.rs  mod.rs  strassen.rs
src/ops/: matmul.rs  mod.rs  vec_ops.rs
src/python/: array.rs  mod.rs  tensor.rs
src/utils/: bindings.rs  mod.rs  validation.rs
testing/: benchmark.py  test.py
