[package]
name = "pocaflow"
version = "0.1.0"
edition = "2021"

[lib]
name = "pocaflow"
crate-type = ["cdylib"]

[dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
core-foundation = "0.9"
metal = "0.27"
cuda-sys = "0.2"
ndarray = "0.15"
numpy = "0.20"
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.7"
cocoa = "0.25"
libc = "0.2"

[features]
default = ["metal-gpu"]
metal-gpu = []
cuda = []
