[package]
name = "pocaflow"
version = "0.1.0"
edition = "2021"

[lib]
name = "pocaflow"
crate-type = ["cdylib"]

[dependencies]
core-foundation = "0.9"
cuda-sys = "0.2"
cublas-sys = "0.1.0"
ndarray = "0.15"
numpy = "0.20"
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.7"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
metal = "0.27"
cocoa = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
# No Apple/Objective-C deps on Linux

[features]
default = ["metal-gpu"]
metal-gpu = []
cuda = []
