[package]
name = "pocaflow"
version = "0.1.0"
edition = "2021"

[lib]
name = "pocaflow"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15"
numpy = "0.20"
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.7"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
objc2 = "0.5"
objc2-foundation = "0.2"
metal = "0.27"
cocoa = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
cuda-runtime-sys = { version = "0.3.0-alpha.1" }  # Instead of cuda-sys
cublas-sys = "0.1.0"

[features]
default = []
metal-gpu = []
cuda = []
