[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pocaflow"
version = "0.1.0"
description = "GPU/CPU linear algebra via Rust"
authors = [{name = "pom", email = "pommybeloved.cc@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]
